--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.0.5",
+    "@react-three/fiber": "^9.1.1",
     "@tailwindcss/vite": "^4.1.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.4",
+    "chart.js": "^4.4.8",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.4.1",
     "recharts": "^2.15.1",
-    "tailwindcss": "^4.1.1"
+    "tailwindcss": "^4.1.1",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
